added background img + css styling + more structure to index.html

--- a/index.html
+++ b/index.html
@@ -5,34 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jacob Frazer "Full Stack Reactor"</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
-    <header>
-        <h1>
-            Jacob Frazer
-        </h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#application-selector">Application Selector</a>
-                </li>
-                <li>
-                    <a href="#full-stack-reactor">Full Stack Reactor</a>
-                </li>
-                <li>
-                    <a href="#lets-connect">Let's Connect</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main id="application-selector" class="apps">
-        <h2></h2>
-    </main>
-    <aside id="full-stack-reactor" class="reactor">
-        <h2></h2>
-    </aside>
-    <footer id="lets-connect">
-        <h2></h2>
-    </footer>
+    <div class="background">
+        <header>
+            <h1>
+                Jacob Frazer
+            </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#application-selector">Application Selector</a>
+                    </li>
+                    <li>
+                        <a href="#full-stack-reactor">Full Stack Reactor</a>
+                    </li>
+                    <li>
+                        <a href="#lets-connect">Let's Connect</a>
+                    </li>
+                    <li>
+                        <button type="menu">About Me</button>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main id="application-selector" class="apps">
+            <div>
+                <h2>Application Selector</h2>
+                <p>PLease load an app into the full stack reactor...</p>
+            </div>
+            <article class="app">
+                <div>
+                    <button type="menu">Run Buddy Landing Page</button>
+                </div>
+                <div>
+                    <button type="menu">Application two</button>
+                </div>
+            </article>
+            <article class="app">
+                <div>
+                    <button type="menu">Application three</button>
+                </div>
+                <div>
+                    <button type="menu">Application four</button>
+                </div>
+            </article>
+        </main>
+        <aside id="full-stack-reactor" class="reactor">
+            <h2>Full Stack Reactor</h2>
+        </aside>
+        <footer id="lets-connect">
+            <h3>Let's Connect!</h3>
+        </footer>
+    </div>
+    
 </body>
 </html>
