added bootcamp project 1 (LifeStyle Apartment Finder-frontend web app) with active link to deployed app with screenshot

--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
                 <h2>Application Selector</h2>
                 <p>PLease load an app into the full stack reactor...</p>
             </div>
-            <article class="app">
+            <article class= "applications">
                 <div>
-                    <button type="menu">Run Buddy Landing Page</button>
+                    <button type="">Run Buddy Landing Page</button>
                 </div>
-                <div>
-                    <button type="menu">Application two</button>
+                <div class= "app">
+                    <button type="menu">Front-end Project 1: LifeStyle Apartment Finder</button><br>
+                    <a href="https://allenharborth9835.github.io/team-project-1/">Click Here: LifeStyle Apartment Finder</a><br>
+                    <img src="./assets/images/lifestyle-apartment-finder.jpeg" alt="Life style apartment finder web application screenshot">
                 </div>
             </article>
             <article class="app">
