changed site background image and theme, changed some style propeties in style.css

--- a/index.html
+++ b/index.html
@@ -8,59 +8,15 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
-    <div class="background">
-        <header>
+    <header>
+        <div class = "center">
             <h1>
-                Jacob Frazer
+            Jacob Frazer
             </h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#application-selector">Application Selector</a>
-                    </li>
-                    <li>
-                        <a href="#full-stack-reactor">Full Stack Reactor</a>
-                    </li>
-                    <li>
-                        <a href="#lets-connect">Let's Connect</a>
-                    </li>
-                    <li>
-                        <button type="menu">About Me</button>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <main id="application-selector" class="apps">
-            <div>
-                <h2>Application Selector</h2>
-                <p>PLease load an app into the full stack reactor...</p>
-            </div>
-            <article class= "applications">
-                <div>
-                    <button type="">Run Buddy Landing Page</button>
-                </div>
-                <div class= "app">
-                    <button type="menu">Front-end Project 1: LifeStyle Apartment Finder</button><br>
-                    <a href="https://allenharborth9835.github.io/team-project-1/">Click Here: LifeStyle Apartment Finder</a><br>
-                    <img src="./assets/images/lifestyle-apartment-finder.jpeg" alt="Life style apartment finder web application screenshot">
-                </div>
-            </article>
-            <article class="app">
-                <div>
-                    <button type="menu">Application three</button>
-                </div>
-                <div>
-                    <button type="menu">Application four</button>
-                </div>
-            </article>
-        </main>
-        <aside id="full-stack-reactor" class="reactor">
-            <h2>Full Stack Reactor</h2>
-        </aside>
-        <footer id="lets-connect">
-            <h3>Let's Connect!</h3>
-        </footer>
-    </div>
-    
+        </div>
+    </header>
+    <footer>
+        <h3>Let's Connect!</h3>
+    </footer>
 </body>
 </html>
