updated some styling on the bootstrap cards, and added link to group project 2- Bait & Tracker

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="row align-items-center">
                 <div class="col-sm">
                   <div class="card">
-                    <div class="card-body-row1">
+                    <div class="card-body">
                       <h5 class="card-title">Apartment Locator Web App</h5>
                       <p class="card-text">Locate apartments within a specified mile radius of a work address.</p>
                       <a href="https://allenharborth9835.github.io/team-project-1/" class="btn btn-primary">LifeStyle Apartment Finder</a>
@@ -35,17 +35,17 @@
                 <div class="col-sm">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">Special title treatment</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title">Fishing Tournament Web App</h5>
+                      <p class="card-text">Embrace your inner "Angler"... Create a competitor profile, track your fish caught, and upload catch images to a dynamic tournament leaderboard!</p>
+                      <a href="https://boiling-hamlet-94098.herokuapp.com/" class="btn btn-primary">Bait & Tracker</a>
                     </div>
                   </div>
                 </div>
               <div class="col-sm">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h5 class="card-title">Coming Soon!</h5>
+                    <p class="card-text">Project 3</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                   </div>
                 </div>
@@ -56,8 +56,8 @@
                 <div class="col-sm">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">Special title treatment</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                      <h5 class="card-title">Coming Soon!</h5>
+                      <p class="card-text">Project 4</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                   </div>
@@ -65,8 +65,8 @@
                 <div class="col-sm">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">Special title treatment</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                      <h5 class="card-title">Coming Soon!</h5>
+                      <p class="card-text">Project 5</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                   </div>
@@ -74,8 +74,8 @@
               <div class="col-sm">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h5 class="card-title">Coming Soon!</h5>
+                    <p class="card-text">Project 6</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                   </div>
                 </div>
@@ -86,8 +86,8 @@
                 <div class="col-sm">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">Special title treatment</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                      <h5 class="card-title">Coming Soon!</h5>
+                      <p class="card-text">Project 7</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                   </div>
@@ -95,8 +95,8 @@
                 <div class="col-sm">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">Special title treatment</h5>
-                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                      <h5 class="card-title">Coming Soon!</h5>
+                      <p class="card-text">Project 8</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                   </div>
@@ -104,8 +104,8 @@
               <div class="col-sm">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h5 class="card-title">Coming Soon!</h5>
+                    <p class="card-text">Project 9</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                   </div>
                 </div>
