updated portfolio with Excella final MERN stack group project, and deployed challenge assignments

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
               <div class="col-sm">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Coming Soon!</h5>
-                    <p class="card-text">Project 3</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Personal Productivity Suite</h5>
+                    <p class="card-text">Excel with "Excella"! This productivity suite allows you to more efficiently organize your tasks with an Eisenhower Matrix UI, keep up with jobs you have applied to with the 'Job CRM', and build healthy work habits with a 'Pomodoro Timer'</p>
+                    <a href="https://excella.herokuapp.com/" class="btn btn-primary">Excella</a>
                   </div>
                 </div>
               </div>
@@ -56,27 +56,27 @@
                 <div class="col-sm">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">Coming Soon!</h5>
-                      <p class="card-text">Project 4</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title">Mobile Weather Dashboard</h5>
+                      <p class="card-text">Dyanmic Mobile-First Weather App</p>
+                      <a href="https://coderjake91.github.io/dynamic-weather-dashboard/" class="btn btn-primary">Surge Weather</a>
                     </div>
                   </div>
                 </div>
                 <div class="col-sm">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">Coming Soon!</h5>
-                      <p class="card-text">Project 5</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title">Social Network API</h5>
+                      <p class="card-text">Basic Social Network API built using MongoDB, Mongoose, and Express.js</p>
+                      <a href="https://github.com/coderjake91/GET-social-API" class="btn btn-primary">Get-Social!</a>
                     </div>
                   </div>
                 </div>
               <div class="col-sm">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Coming Soon!</h5>
-                    <p class="card-text">Project 6</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Coding Quiz</h5>
+                    <p class="card-text">Coding quiz created for aspiring developers to test their coding knowledge.</p>
+                    <a href="https://coderjake91.github.io/developer-code-quiz/" class="btn btn-primary">Developer Coding Quiz</a>
                   </div>
                 </div>
               </div>
@@ -86,27 +86,27 @@
                 <div class="col-sm">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">Coming Soon!</h5>
-                      <p class="card-text">Project 7</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title">Work Day Task Calendar</h5>
+                      <p class="card-text">Calendar application that allows user to save events/tasks as their work day progresses.</p>
+                      <a href="https://coderjake91.github.io/work-day-schedule-assistant/" class="btn btn-primary">Work Day Scheduler</a>
                     </div>
                   </div>
                 </div>
                 <div class="col-sm">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">Coming Soon!</h5>
-                      <p class="card-text">Project 8</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title">Node.js Command-line Interface (CLI) </h5>
+                      <p class="card-text">Node.js CLI application (written using OOP and a Test Driven Development framework (Jest))-collects a Tech Manager's software engineering Team's info, and generates a static HTML webpage for each employee.</p>
+                      <a href="https://github.com/coderjake91/manage-my-techTeam" class="btn btn-primary">Manage My Tech-Team</a>
                     </div>
                   </div>
                 </div>
               <div class="col-sm">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Coming Soon!</h5>
-                    <p class="card-text">Project 9</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Password Generator</h5>
+                    <p class="card-text">Password generator written in JS, that uses the Web Crypto API to create secure passwords with user specified character types.</p>
+                    <a href="https://coderjake91.github.io/CreateMyPassword/" class="btn btn-primary">Create My Password</a>
                   </div>
                 </div>
               </div>
